kubeconf/acceptpython-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: acceptpython-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: acceptpython.test
      http:
        paths: 
          - path: /
            pathType: Prefix
            backend:
              service:
                name: acceptpython-app
                port:
                  number: 5000
